test/corpus/sequences.txt
================================================================================
Sequences
================================================================================

seq riff(meter: 4/4, step: 1/8, tempo: 120bpm) {
  C4, _, E4@0.5,
  [G4, B4]@1, C5,
}
seq empty

--------------------------------------------------------------------------------

(source_file
  (sequence_declaration
    (identifier)
    (settings
      (setting
        (identifier)
        (binary_expression
          (number
            (integer))
          (number
            (integer))))
      (setting
        (identifier)
        (binary_expression
          (number
            (integer))
          (number
            (integer))))
      (setting
        (identifier)
        (number
          (integer)
          (unit))))
    (steps
      (step
        (identifier))
      (step
        (rest))
      (step
        (identifier)
        (number
          (float)))
      (step
        (frame
          (identifier)
          (identifier))
        (number
          (integer)))
      (step
        (identifier))))
  (sequence_declaration
    (identifier)))

================================================================================
Invoking, triggering and halting
================================================================================

rill main() Sample {
  on start { current = invoke riff(loop: true) }
  on pad(hit) {
    invoke riff
    invoke 3 riff(tempo: 90bpm * hit.velocity)
    trigger 2 current riff
    trigger note.instance riff
    halt riff
    halt current riff
    invoke lead(pitch: C4, velocity: 1)
  }
  return 0
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (event_handler
        (identifier)
        (block
          (assignment
            (identifier)
            (invoke_expression
              (identifier)
              (arguments
                (argument
                  (identifier)
                  (boolean)))))))
      (event_handler
        (identifier)
        (event_parameters
          (identifier))
        (block
          (expression_statement
            (invoke_expression
              (identifier)))
          (expression_statement
            (invoke_expression
              (number
                (integer))
              (identifier)
              (arguments
                (argument
                  (identifier)
                  (binary_expression
                    (number
                      (integer)
                      (unit))
                    (field_expression
                      (identifier)
                      (field_identifier)))))))
          (expression_statement
            (trigger_expression
              (number
                (integer))
              (identifier)
              (identifier)))
          (expression_statement
            (trigger_expression
              (operand_field
                (identifier)
                (field_identifier))
              (identifier)))
          (expression_statement
            (halt_expression
              (identifier)))
          (expression_statement
            (halt_expression
              (identifier)
              (identifier)))
          (expression_statement
            (invoke_expression
              (identifier)
              (arguments
                (argument
                  (identifier)
                  (identifier))
                (argument
                  (identifier)
                  (number
                    (integer))))))))
      (return_statement
        (number
          (integer))))))

================================================================================
Voices
================================================================================

rill voice() Sample {
  on keys(note) claim { level = 1 }
  on keys(note) claim(tail: 2s) { level = 1 }
  on lifts release { level = 0 }
  return 0
}
rill main() Sample { return sum([voice(); 8]) }

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (event_handler
        (identifier)
        (event_parameters
          (identifier))
        (handler_mode)
        (block
          (assignment
            (identifier)
            (number
              (integer)))))
      (event_handler
        (identifier)
        (event_parameters
          (identifier))
        (handler_mode
          (arguments
            (argument
              (identifier)
              (number
                (integer)
                (unit)))))
        (block
          (assignment
            (identifier)
            (number
              (integer)))))
      (event_handler
        (identifier)
        (handler_mode)
        (block
          (assignment
            (identifier)
            (number
              (integer)))))
      (return_statement
        (number
          (integer)))))
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (return_statement
        (call_expression
          (identifier)
          (arguments
            (argument
              (repeat_frame
                (call_expression
                  (identifier)
                  (arguments))
                (number
                  (integer))))))))))

================================================================================
Sequence words as names
================================================================================

let seq = 1
let invoke = seq + 2
let claim = invoke
halt(1)

--------------------------------------------------------------------------------

(source_file
  (let_statement
    (identifier)
    (number
      (integer)))
  (let_statement
    (identifier)
    (binary_expression
      (identifier)
      (number
        (integer))))
  (let_statement
    (identifier)
    (identifier))
  (expression_statement
    (call_expression
      (identifier)
      (arguments
        (argument
          (number
            (integer)))))))
